--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -4,32 +4,39 @@
 @use "dove";
 @use "helper";
 // ---------------------------------------------------------------
-._1200 { max-width:1200px; @extend .mc; position:relative }
-._960  { max-width:960px;  @extend .mc; position:relative }
+%_1200 { max-width:1200px; @extend .mc; position:relative }
+%_960  { max-width:960px;  @extend .mc; position:relative }
 // ---------------------------------------------------------------
-$bg : #fff;
-$text_color  : #222;
-$grey_border : #ccc;
-$code_bg : rgba(#ddd,.7);
+$bg : #ddd;
+$text_color  : #444;
+$grey_border : #aaa;
+$code_bg : rgba(#bcbcbc,.7);
 $code_tc : #444;
 $pre_bg  : #f4f4f4;
 // ---------------------------------------------------------------
 %std_bg { background-color:$bg }
 %std_border { border-color:$grey_border }
-%std_margin { margin:.5rem 0 }
+%std_margin { margin:.5em 0 }
 // ---------------------------------------------------------------
-body { @extend .scrollable;color:#444 }
-hr { border-width:2px; &.thin { border-width:1px } }
+body { @extend .scrollable; }
+._app { overflow:initial;position:initial }
+body { color:$text_color }
 h1,h2,h3,h4,h5,h6,.hero { color:#000 }
+hr { border-width:2px; &.thin { border-width:1px } }
 u,a,abbr,abbr[title] {
-  text-underline-offset:.2em;
-  text-underline-position: initial;
-  text-decoration-thickness: initial;
-  text-decoration-skip-ink: initial;
+  text-underline-offset:.15em;
+  text-underline-position:initial;
+  text-decoration-thickness:initial;
+  text-decoration-skip-ink:initial;
 }
-sub,sup { margin:0;font-size:.8em }
-dt { margin-block-start:1rem }
-dd { margin-block-end:1rem }
+._sub,._sup,sub,sup { margin:0;@extend .smaller; }
+blockquote { border-left:.5rem solid $grey_border }
+tt { @extend .mono; }
+kbd { @extend ._kbd; }
+._kbd,kbd { padding:.25em .5em;@extend .smallest; }
+img { @extend .text-grey; }
+dt { margin-block-start:.5em }
+dd { margin-block-end:.5em }
 details { 
   & { @extend %std_margin; }
   summary {
@@ -37,26 +44,26 @@ details {
     p { @extend .inline; }
   }
 }
+._li,li { margin:.25em .7em }
 article {
   img { border-radius:5px }
 }
 .markdown-body {
   & { margin-top:0 !important } // to align with top bar
-  blockquote {
-    border-left:.5rem solid $grey_border;
-    box-shadow:none;
-  }
-  summary { margin:0 }
-  ._layout { padding:0;margin:0 auto }
+  code,tt,kbd { background-color:$code_bg;color:$code_tc }
+  pre { code,tt { @extend .no_bg;color:inherit } }
+  blockquote { box-shadow:none }
+  summary { @extend .ma0; }
   table {
     thead tr,
     tr:nth-child(2n) { background-color:#e5e5e5 }
     &.borderless { tr { background:none !important } }
   }
+  ._layout { margin:0 auto;@extend .pa0; }
+  .highlight pre { @extend .ma0; }
 }
-._app { overflow:initial;position:initial }
 ._header {
-  h1 { margin-top:0;border:0 } // logo holder
+  h1 { @extend .mt0;@extend .ba0; } // logo holder
   ._logo {
     & { font-size:1.5rem;line-height:1.5 }
     a {
@@ -67,36 +74,47 @@ article {
   }
 }
 ._theme_switch {
-  a { font-size:1.25em }
-  a,
-  a:focus { @extend .inherit_color; }
-  a:hover { @extend .text-blue; }
+  a {
+    font-size:1.25em;
+    margin:.6rem;
+    @extend .inherit_color;
+  }
 }
 .itext,
 .isvg { line-height:.8 }
-.box { @extend .ph; }
-div.highlight { overflow:hidden }
+.box {
+  padding:.5em 1em;
+  @extend %std_border;
+  summary { margin:0 -.5em }
+}
+.ba { @extend %std_border; }
+.button {
+  & {
+    @extend ._bt;
+    border-color:transparent;
+    padding: 0.75em 1em;
+  }
+  &.primary {
+    @extend .bg-blue;
+    @extend .text-white;
+  }
+  &.secondary {
+    @extend .bg-slategrey;
+    @extend .text-white;
+  }
+}
+div.highlight { @extend .no_overflow; }
 pre.highlight { @extend .scrollable; }
 .highlight {
-  .mh  { margin:0 }
+  .mh  { @extend .ma0; }
   .hll { background-color:rgba($text-yellow,.15); }
 }
 .rouge-table {
   td.code,
   td.gutter { vertical-align:top }
 }
-.button {
-  &.primary {
-    @extend .bg-blue;
-    @extend .border-blue;
-    @extend .text-white;
-  }
-  &.secondary {
-    @extend .bg-slategrey;
-    @extend .border-slategrey;
-    @extend .text-white;
-  }
-}
+.task-list { padding-left:.25em; ul,ol { padding-left:2em } }
+a.footnote { @extend .ma0; }
 .footnotes {
   & { @extend .ba0; }
   ul,ol { list-style-position:inside }
@@ -104,29 +122,37 @@ pre.highlight { @extend .scrollable; }
 }
 ._footer {
   & { margin-bottom: 4rem !important }
-  ._layout { padding:0; font-size:1em }
+  ._layout { font-size:1em;@extend .pa0; }
 }
 ._copyright_text,
-._credit_link { background-color:#ddd !important }
+._credit_link { background-color: $bg !important }
 // ---------------------------------------------------------------
 $dark_bg : color.invert($bg);
 $dark_text_color : color.invert($text_color);
-$dark_code_bg : rgba(#333,.7);
+$dark_code_bg : rgba(#434343,.7);
 $dark_code_tc : #bbb;
 $dark_pre_bg  : #171717;
 // ---------------------------------------------------------------
 %dark_std_bg { background-color:color.invert($bg) }
 %dark_std_border { border-color:color.invert($grey_border) }
 ._dark {
-  body{color:#bbb}
+  body { color:$dark_text_color }
   h1,h2,h3,h4,h5,h6,.hero { color:#fff }
+  ._kbd,kbd {
+    background-color:#2f2f2f;
+    color:#d3d3d3;
+    box-shadow:0 0 0 1px rgba(#000,.5), .1em .1em 0 .1em rgba(#fff,.1) inset, -.1em -.1em 0 .1em rgba(#000,.3) inset;
+  }
   .markdown-body {
     blockquote { @extend %dark_std_border; }
+    code,tt,kbd { background-color:$dark_code_bg;color:$dark_code_tc }
+    pre { code,tt { @extend .no_bg;color:inherit } }
     table {
       thead tr,
       tr:nth-child(2n) { background-color: #1b1b1b }
     }
   }
+  .box { @extend %dark_std_border; }
   ._copyright_text,
-  ._credit_link { background-color:#222 !important }
+  ._credit_link { background-color: $dark_bg !important }
 }
