--- a/_scss/_dove/helper.scss
+++ b/_scss/_dove/helper.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @use "color" as *;
 // ---------------------------------------------------------------
-.n { font-weight:inherit; font-style:inherit }
+.n { font-weight:inherit;font-style:inherit }
 
 .sans { font-family: "Roboto", "Arial", system-ui, sans-serif }
 .serif { font-family: "Times New Roman", "Times", serif }
@@ -9,6 +9,7 @@
 
 .small { font-size:.9em }
 .smaller { font-size:.8em }
+.smallest { font-size:.7em }
 
 .scrollable { overflow:auto }
 .scroll_x { overflow-x:scroll }
@@ -35,7 +36,60 @@
 .text-center  { text-align:center }
 .text-justify { text-align:justify }
 
-.centered { display:block;margin-left:auto;margin-right:auto; }
+.list-lower-roman { list-style:lower-roman }
+.list-lower-alpha { list-style:lower-alpha }
+
+.ba { border:1px solid $text-grey }
+.bl,.bh { border-left:1px solid $text-grey }
+.br,.bh { border-right:1px solid $text-grey }
+.bt,.bv { border-top:1px solid $text-grey }
+.bb,.bv { border-bottom:1px solid $text-grey }
+
+.ba0 { border:0 }
+.bl0,.bh0 { border-left:0 }
+.br0,.bh0 { border-right:0 }
+.bt0,.bv0 { border-top:0 }
+.bb0,.bv0 { border-bottom:0 }
+
+.pa { padding:1em }
+.pl,.ph { padding-left:1em }
+.pr,.ph { padding-right:1em }
+.pt,.pv { padding-top:1em }
+.pb,.pv { padding-bottom:1em }
+
+.pa_5 { padding:.5em }
+.pl_5,.ph_5 { padding-left:.5em }
+.pr_5,.ph_5 { padding-right:.5em }
+.pt_5,.pv_5 { padding-top:.5em }
+.pb_5,.pv_5 { padding-bottom:.5em }
+
+.pa0 { padding:0 }
+.pl0,.ph0 { padding-left:0 }
+.pr0,.ph0 { padding-right:0 }
+.pt0,.pv0 { padding-top:0 }
+.pb0,.pv0 { padding-bottom:0 }
+
+.ma { margin:1em }
+.ml,.mh { margin-left:1em }
+.mr,.mh { margin-right:1em }
+.mt,.mv { margin-top:1em }
+.mb,.mv { margin-bottom:1em }
+
+.ma_5 { margin:.5em }
+.ml_5,.mh_5 { margin-left:.5em }
+.mr_5,.mh_5 { margin-right:.5em }
+.mt_5,.mv_5 { margin-top:.5em }
+.mb_5,.mv_5 { margin-bottom:.5em }
+
+.ma0 { margin:0 }
+.ml0,.mh0 { margin-left:0 }
+.mr0,.mh0 { margin-right:0 }
+.mt0,.mv0 { margin-top:0 }
+.mb0,.mv0 { margin-bottom:0 }
+
+.mc { margin-left:auto;margin-right:auto }
+
+// ---------------------------------------------------------------
 
 .hero {
   @extend .block;
@@ -62,8 +116,8 @@
 .button {
   @extend .inblock;
   @extend .no_u;
-  border:1px solid;
   padding:.5em;
+  border:1px solid;
   margin:.25rem .25rem;
   border-radius:.25em;
   line-height:1;
@@ -71,26 +125,22 @@
 
 .icon { font-style:normal }
 .itext,
-.isvg {
-  @extend .inblock;
-  width:1em;
-  height:1em;
-  vertical-align:text-bottom;
-  text-align:center;
-  line-height:1;
-}
+.isvg,
 .isvg svg {
   @extend .inblock;
   width:1em;
   height:1em;
 }
-
-.list-lower-roman { list-style:lower-roman }
-.list-lower-alpha { list-style:lower-alpha }
+.itext,
+.isvg {
+  vertical-align:text-bottom;
+  text-align:center;
+  line-height:1;
+}
 
 table {
-  &.simple { td, th { border-width:1px 0 !important } }
-  &.borderless { &, tr, td, th { border:0 !important } }
+  &.simple { td,th { border-width:1px 0 !important } }
+  &.borderless { &,tr,td,th { border:0 !important } }
 }
 
 .task-list { list-style:none }
@@ -103,63 +153,17 @@ table {
 
 .footnote { padding:0 .25em }
 .footnote,
-.reversefootnote { text-decoration:none !important }
+.reversefootnote { @extend .no_u; }
 .footnotes {
-  font-size:.9em;
-  li::marker {font-size:.8em}
+  @extend .small;
+  li::marker { @extend .smaller; }
 }
 
 .box { box-sizing:border-box; @extend .ba; @extend .pa_5; }
 
-.ba0 { border:0 }
-.bl0,.bh0 { border-left:0 }
-.br0,.bh0 { border-right:0 }
-.bt0,.bv0 { border-top:0 }
-.bb0,.bv0 { border-bottom:0 }
+.centered { @extend .block; @extend .mc; }
 
-.ba { border:1px solid $text-grey }
-.bl,.bh { border-left:1px solid $text-grey }
-.br,.bh { border-right:1px solid $text-grey }
-.bt,.bv { border-top:1px solid $text-grey }
-.bb,.bv { border-bottom:1px solid $text-grey }
-
-.pa0 { padding:0 }
-.pl0,.ph0 { padding-left:0 }
-.pr0,.ph0 { padding-right:0 }
-.pt0,.pv0 { padding-top:0 }
-.pb0,.pv0 { padding-bottom:0 }
-
-.pa_5 { padding:.5em }
-.pl_5,.ph_5 { padding-left:.5em }
-.pr_5,.ph_5 { padding-right:.5em }
-.pt_5,.pv_5 { padding-top:.5em }
-.pb_5,.pv_5 { padding-bottom:.5em }
-
-.pa { padding:1em }
-.pl,.ph { padding-left:1em }
-.pr,.ph { padding-right:1em }
-.pt,.pv { padding-top:1em }
-.pb,.pv { padding-bottom:1em }
-
-.mc { margin-left:auto;margin-right:auto }
-
-.ma0 { margin:0 }
-.ml0,.mh0 { margin-left:0 }
-.mr0,.mh0 { margin-right:0 }
-.mt0,.mv0 { margin-top:0 }
-.mb0,.mv0 { margin-bottom:0 }
-
-.ma_5 { margin:.5em }
-.ml_5,.mh_5 { margin-left:.5em }
-.mr_5,.mh_5 { margin-right:.5em }
-.mt_5,.mv_5 { margin-top:.5em }
-.mb_5,.mv_5 { margin-bottom:.5em }
-
-.ma { margin:1em }
-.ml,.mh { margin-left:1em }
-.mr,.mh { margin-right:1em }
-.mt,.mv { margin-top:1em }
-.mb,.mv { margin-bottom:1em }
+// ---------------------------------------------------------------
 
 .bg-primary{ @extend .bg-blue; }
 .bg-secondary{ @extend .bg-slategrey; }
@@ -177,7 +181,6 @@ table {
 .bg-yellow{background-color:$text-yellow !important}
 .bg-orange{background-color:$text-orange !important}
 
-.text-black { color:$text-black !important }
 .text-primary{ @extend .text-blue; }
 .text-secondary{ @extend .text-slategrey; }
 .text-slategray{ @extend .text-slategrey; }
@@ -210,10 +213,15 @@ table {
 .border-yellow{border-color:$text-yellow !important}
 .border-orange{border-color:$text-orange !important}
 
-.no_max_height pre.highlight { max-height:none !important }
-
 .inherit_color { color:inherit !important }
+
+.no_max_height {
+  &,pre.highlight { max-height:none !important }
+}
+
+.no_overflow { overflow:hidden !important }
 .no_bg { background:none !important; }
 .no_u { text-decoration:none !important }
 .no_wrap { white-space:nowrap !important }
+
 .hide { display:none !important }
