--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -20,7 +20,7 @@
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
           <header class="_header">
             <div class="_layout">
               {% capture header -%}{% include header.md %}{%- endcapture %}
@@ -49,7 +49,7 @@
         </div>{% comment %} end of _layout {% endcomment %}
       </div>{% comment %} end of _view {% endcomment %}
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
           {% include theme_switch.html %}
         </div>
       </div>
