--- a/_scss/_dove/helper.scss
+++ b/_scss/_dove/helper.scss
@@ -5,7 +5,7 @@
 
 .sans { font-family: "Roboto", "Arial", system-ui, sans-serif }
 .serif { font-family: "Times New Roman", "Times", serif }
-.mono { font-family: "Source Code Pro", "Courier New", "Courier", monospace, monospace }
+.mono { font-family: "Source Code Pro", "Consolas", "Andale Mono", "Courier New", "Courier", monospace, monospace }
 
 .small { font-size:.9em }
 .smaller { font-size:.8em }
