--- a/_source/_layouts/_dove.pug
+++ b/_source/_layouts/_dove.pug
@@ -16,6 +16,12 @@ mixin bull
 mixin _bull
   +_itext|&bull;
 
+mixin middot
+  +itext|&middot;
+
+mixin _middot
+  +_itext|&middot;
+
 mixin angle
   +isvg(svgi.angle)
 
