--- a/_config.pug
+++ b/_config.pug
@@ -1,13 +1,13 @@
 -
-  version      = '0.0.4'
-  revision     = '2512.04'
-
   title        = 'Dove'
   description  = 'A theme development project.'
-  //- # title       : 'The title of your site'
-  //- # description : 'Short description of your site's purpose.'
+  //- title       = "The title of your site"
+  //- description = "Short description of your site's purpose."
 
   author       = 'Techie Joe'
+
+  version      = '0.0.4'
+  revision     = '2512.04'
 
   base_url     = '/dove'
   home_url     = '/dove'
@@ -21,14 +21,14 @@
   color_scheme = 'light dark'
 
   ghost        = btoa([ "localhost", "localhost:4000", "techie-joe.github.io" ])
-  //- ghost = 'your-tracking-id'
+  //- ghost = your-tracking-id
   //- # to track your ThemeJs.
 
-  //- google_analytics = 'your Google Analytics tracking ID'
+  //- google_analytics = your-tracking-id
   //- # to track your website using Google Analytics.
 
-  //- cloudflare_analytics = 'your Cloudflare Analytics tracking ID'
+  //- cloudflare_analytics = your-tracking-id
   //- # to track your website using Cloudflare Analytics.
 
-  //- show_downloads: true/false
+  //- show_downloads = true/false
   //- # to indicate whether to provide a download URL.
