--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,1 +1,1 @@
-<div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
+<div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Powered by Dove</a></div>
