--- a/_source/mallet/post.html.pug
+++ b/_source/mallet/post.html.pug
@@ -6,7 +6,4 @@ block append vars
 block content
   h1 Post title
   p: code // post content
-  .mt-6
-  hr
-  h2 Other posts
-  +include('posts','posts.md')
+  +post_footer
