--- a/_source/mallet/preview.html.pug
+++ b/_source/mallet/preview.html.pug
@@ -1,10 +1,7 @@
-extends _html
+extends _html_preview
 block append vars
   - path   = 'preview.html'
   - title  = `Preview`
   - description = `Theme preview.`
 block content
   +include('preview','preview.md')
-block footer
-  //- no site footer
-  +_edit_link
