--- a/_source/mallet/test_code-blocks.html.pug
+++ b/_source/mallet/test_code-blocks.html.pug
@@ -1,12 +1,6 @@
-extends _html
+extends _html_preview
 block append vars
   - path   = 'test_code-blocks.html'
   - title  = `Test Code Blocks`
-block append nav
-  nav.mv: +test_nav(layout_name)
-  +thin_hr
 block content
   +include('code-blocks','test_code-blocks.md')
-block footer
-  //- no site footer
-  +_edit_link
