--- a/_source/mallet/test_colors.html.pug
+++ b/_source/mallet/test_colors.html.pug
@@ -1,12 +1,6 @@
-extends _html
+extends _html_preview
 block append vars
   - path   = 'test_colors.html'
   - title  = `Test Colors`
-block append nav
-  nav.mv: +test_nav(layout_name)
-  +thin_hr
 block content
   +include('test','test_colors.md')
-block footer
-  //- no site footer
-  +_edit_link
