update mallet layouts and demo

--- a/_includes/dove/logo.html
+++ b/_includes/dove/logo.html
@@ -5,7 +5,7 @@
 {%- when 'nova' or 'nova-page' or 'nova-post' %}
 <span class="_logo"><a href="{{ site.home_url }}/nova">🌌 Nova</a></span>
 {%- when 'mallet' or 'mallet-page' or 'mallet-post' %}
-<span class="_logo"><a href="{{ site.home_url }}/mallet">⚒️ Mallet</a></span>
+<span class="_logo"><a href="{{ site.home_url }}/mallet">⚒️ Techie Joe's Mallet</a></span>
 {%- when 'core' or 'core-page' or 'core-post' %}
 <span class="_logo"><a href="{{ site.home_url }}/core">💎 Core</a></span>
 {%- else %}
