--- a/_layouts/primer.html
+++ b/_layouts/primer.html
@@ -1,6 +1,10 @@
 {%- assign layout_name = "primer" -%}
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="_dark">
+  <!-- path        : {{ page.path }} -->
+  <!-- layout      : _layouts/{{ page.layout }} -->
+  <!-- title       : {{ page.title | default: "(untitled)" }} -->
+  <!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
