--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -1,5 +1,6 @@
 extends /_source/_layouts/mallet
 block append update_vars
+  - icon = '⚒️'
   - path = [layout_name,path].join('/')
 block prepend front_matter
   +l| index: false
