--- a/_source/mallet/templates.html.pug
+++ b/_source/mallet/templates.html.pug
@@ -1,35 +1,41 @@
 extends _html_preview
 block append vars
-  - path   = 'index.html'
-  - title  = `Mallet Templates`
-  - description = `Essential collection suitable for any project.`
-block nav
+  - path   = 'templates.html'
+  - title  = `Basic Mallet Templates`
+  - description = `Essential collection suitable for any website.`
+//- block nav
   +hide_nav
-block content
+block append style
   style.
-    .hero_block { padding:1rem 2rem }
-    .hero_block .hero-title { margin-top:1rem }
-    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-    .hero_block .hero-hr { margin-top:45px }
-  .hero_block.box
-    h1.hero-title ⚒️ !{title}
-    p.hero-description !{description}
-
-  nav.mv
-    +a('about')| About  
-  +thin_hr
-
-  nav.mv
-    +test_nav(layout_name)
-  +thin_hr
+    ._article h1 { border:0 }
+    ._article .subt { padding-bottom:1.3em;margin-top:-0.7em }
+  //- 
+    ._article h1 { border:0;font-size:3em;font-weight:bold }
+block content
+  h1.hero !{title}
+  h2.subt !{icon} !{removeLastDot(description)}
+  p.
+    This collection value #[strong simplicity and versatility] &mdash; Designed for those who is launching a personal blog, a professional portfolio, or a small business landing page. These templates provide the perfect clean slate to bring your vision to life.
+  div(style="margin-bottom:3rem")
 
   nav.mv
     b Html
     +angle
     +site_nav(layout_name)
-  +thin_hr
 
   nav.mv
     b Markdown
     +angle
     +site_nav(layout_name+'/md')
+
+  div(style="margin-top:3rem")
+
+  .box: nav
+    b Test
+    +angle
+    +test_nav(layout_name)
+  //- 
+
+  div(style="margin-top:3rem")
+  p.
+    #[strong #[a(href="./preview") Preview the theme]] to see what it looks like and #[strong #[a(href="./#how-to-use") start using it]] today!
