--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -58,4 +58,4 @@ block content
   +thin_hr
   |{%- endif %}
   h3 Configurations
-  +include_relative('config','_config.md')
+  +include_relative('config','config.md')
