update template_nav test

--- a/_source/_layouts/_dove.pug
+++ b/_source/_layouts/_dove.pug
@@ -113,6 +113,8 @@ mixin template_nav(sub)
   +sna(sub+"/preview.html")| Preview
   +bull
   +sna(sub+"/templates.html")| Templates
+  +bull
+  +sna(sub+"/test.html")| Test
 
 mixin page_footer
   .mt-6
