--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -11,6 +11,8 @@ block nav
     b Html
     +angle
     +site_nav(layout_name)
+    +bull
+    +sna(layout_name+"/templates"): small| (more..)
   +thin_hr
 block footer
   +thin_hr
