--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -46,6 +46,7 @@ include /_config
   onclick = ( _script='' ) => 'event.preventDefault();' + _script;
   capitalize = s => s.replace(/\w\S*/g, w => w[0].toUpperCase() + w.slice(1).toLowerCase());
   removeLastDot = s => s.replace(/\.$/, '');
+  removePathExt = (path,ext) => path.replace(new RegExp(`\\.${ext}$`), '');
 
 //- ==============================================================
 
