--- a/_source/mallet/templates.html.pug
+++ b/_source/mallet/templates.html.pug
@@ -3,19 +3,15 @@ block append vars
   - path   = 'templates.html'
   - title  = `Basic Mallet Templates`
   - description = `Essential collection suitable for any website.`
-//- block nav
-  +hide_nav
 block append style
   style.
     ._article h1 { border:0 }
     ._article .subt { padding-bottom:1.3em;margin-top:-0.7em }
-  //- 
-    ._article h1 { border:0;font-size:3em;font-weight:bold }
 block content
   h1.hero !{title}
   h2.subt !{icon} !{removeLastDot(description)}
   p.
-    This collection value #[strong simplicity and versatility] &mdash; Designed for those who is launching a personal blog, a professional portfolio, or a small business landing page. These templates provide the perfect clean slate to bring your vision to life.
+    This collection value #[strong simplicity and versatility] &mdash; Get the perfect clean slate for a personal blog, a portfolio, or a quick start-up page.
   div(style="margin-bottom:3rem")
 
   nav.mv
@@ -24,17 +20,9 @@ block content
     +site_nav(layout_name)
 
   nav.mv
-    b Markdown
+    b Md
     +angle
     +site_nav(layout_name+'/md')
-
-  div(style="margin-top:3rem")
-
-  .box: nav
-    b Test
-    +angle
-    +test_nav(layout_name)
-  //- 
 
   div(style="margin-top:3rem")
   p.
