--- a/_source/mallet/test.html.pug
+++ b/_source/mallet/test.html.pug
@@ -1,1 +1,17 @@
-extends templates.html.pug
+extends _html_preview
+block append vars
+  - path   = 'test.html'
+  - title  = `Test`
+  - description = `Test page.`
+block footer
+  //- no footer
+block content
+  nav.mv
+    +test_nav(layout_name)
+
+  +thin_hr
+
+  nav.mv
+    +sna(layout_name+"/test_page")| Test Page
+
+  div(style="margin-top:3rem")
