--- a/_includes/ui.html
+++ b/_includes/ui.html
@@ -1,6 +1,7 @@
 {%- assign nl="
 " %}
 {% capture thin_hr -%}<hr class="thin" />{%- endcapture %}
-{% capture bull -%}<i class="icon"><i class="itext">&bull;</i></i>{%- endcapture %}
-{% capture middot -%}<i class="icon"><i class="itext">&middot;</i></i>{%- endcapture %}
-{% capture angle -%}<i class="icon"><i class="isvg"><svg viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path></svg></i></i>{%- endcapture %}
+{% capture bull -%}{% include itext.html text="&bull;" %}{%- endcapture %}
+{% capture colon -%}{% include itext.html text=":" %}{%- endcapture %}
+{% capture middot -%}{% include itext.html text="&middot;" %}{%- endcapture %}
+{% capture angle -%}{% include isvg.html path="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" %}{%- endcapture %}
