--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -12,7 +12,7 @@ block nav
     +angle
     +site_nav(layout_name)
     +bull
-    +sna(layout_name+"/templates"): small| (more..)
+    +sna(layout_name+"/samples"): small| more..
   +thin_hr
 block footer
   +thin_hr
