--- a/_source/mallet/index.html.pug
+++ b/_source/mallet/index.html.pug
@@ -3,6 +3,21 @@ block append vars
   - path   = 'index.html'
   - title  = `Techie Joe's Mallet`
   - description = `Mallet is a Jekyll theme for GitHub Pages.`
+block append style
+  style.
+    ._article h2:first-of-type { padding-bottom:1.3em;margin-top:-0.7em }
+    ._article #icon {
+      position: absolute;
+      font-size:1em;
+      opacity:.2;
+      right:10em;
+      line-height:1;
+      z-index:-1;
+      top:5em;
+      scale:14;
+    }
 block header
   h1|{% include dove/logo.html %}
   //- +hide_header
+block prepend content
+  div(style="position:relative"): #icon !{icon}
