--- a/_source/mallet/test_code-blocks.html.pug
+++ b/_source/mallet/test_code-blocks.html.pug
@@ -1,6 +1,7 @@
 extends _html_test
 block append vars
   - path   = 'test_code-blocks.html'
-  - title  = `Test Code Blocks`
+  - title  = `Code blocks`
+  - description = `Code block samples.`
 block content
   +include('code-blocks','test_code-blocks.md')
