--- a/_source/mallet/test_colors.html.pug
+++ b/_source/mallet/test_colors.html.pug
@@ -1,6 +1,7 @@
 extends _html_test
 block append vars
   - path   = 'test_colors.html'
-  - title  = `Test Colors`
+  - title  = `Colors`
+  - description = `Color samples.`
 block content
   +include('test','test_colors.md')
