--- a/_source/mallet/index.html.pug
+++ b/_source/mallet/index.html.pug
@@ -20,4 +20,4 @@ block header
   h1|{% include dove/logo.html %}
   //- +hide_header
 block prepend content
-  div(style="position:relative"): #icon !{icon}
+  .relative: #icon !{icon}
