--- a/_source/mallet/home.html.pug
+++ b/_source/mallet/home.html.pug
@@ -5,11 +5,10 @@ block append vars
   - description = 'Home template'
 block append style
   style.
-    .hero_block { padding:1rem 2rem }
-    .hero_block .hero-title { margin-top:1rem }
-    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-    .hero_block .hero-hr { margin-top:45px }
-    ._article #icon {
+    #hero_block { padding:1rem 2rem }
+    #hero_block h1 { margin-top:1rem }
+    #hero_block h2 { border:0;font-weight:normal;font-size:1.2em }
+    #hero_block #icon {
       position: absolute;
       font-size:1em;
       opacity:.2;
@@ -20,10 +19,10 @@ block append style
       scale:14;
     }
 block content
-  .hero_block.box.no_overflow
+  #hero_block.box.no_overflow
     .relative: #icon !{icon}
-    h1.hero-title ⚒️ Site title
-    p.hero-description Your site's description.
+    h1 !{icon} Site title
+    h2 Site slogan or description
 
   +thin_hr
-  p: code // !{title.toLowerCase()} content
+  p: code // home content
